governance-shared/baselines/3.17.0/ChronoPM-Project/assets/templates/personal-daily-todo-template.md
---
doc_type: personal-daily-todo
owner: [姓名]
date: YYYY-MM-DD
project: [子项目名]
---

# 待办 - {YYYY-MM-DD} - {姓名}

> 存储于 `todos/{YYYY-MM-DD}/{姓名}.md`，待办为唯一最小可执行单位。
> v3.0.0 章节序：§0 人员信息 → §0.5 进出组记录 → §0.6 能耗记录 → §1 待办清单（3 表 + 备注区 + 关联处理记录）→ §2 日报存档 → §3 工作日志 → §4 个人备注 → §5 时间线/里程碑影响 → §6 变更日志 → Revision Log。

## 0. 人员信息

> 本段只留联系方式、负责模块。T+1 拷贝范围含 §0 / §0.5 / §0.6：新建当日文件时从该人最新文件拷贝（滚存快照）。
> PM 不主动要求修改时，直接沿用前一天数据。字段缺失时 AI 提示 PM 补全。
> 岗位 / 首次进组 / 在组状态读最新合法日 `_index.md` §1（花名册），禁止写本段。身份冲突以花名册 `_index.md` §1 为准。

| 字段 | 值 |
|---|---|
| 联系方式 | [手机号/邮箱] |
| 负责模块 | [业务模块名] |

## 0.5 进出组记录

> 多行事件流。长期在组者一行（出组日期=待定）；间接配合人员每次配合一行。
> T+1 拷贝：整表复制；当日有日报/待办且末行已出组时追加新进组行。AI 不自动判出组。

| 进组日期 | 出组日期 | 触发依据 | 备注 |
|---|---|---|---|
| YYYY-MM-DD | YYYY-MM-DD / 待定 | 日报产出 / 待办指派 / PM 声明 | [备注] |

## 0.6 能耗记录

> 人员维度累计与每日明细。单位取自 `project-context`「成本核算方式」的人工计量单位，模板一律写 `[能耗单位]`，禁止写死具体单位。
> 当日能耗由 PM 投喂或按默认能耗规则登记；AI 禁止自行推算、禁止凭空编数字。无数据时标「—」。禁止增加金额列。
> T+1：不把历史日表整表拷进新文件。新文件只带累计数字、当天一行、仍没有独立日文件的孤儿行。累计不含异常=重复待裁定。
> 有该日个人文件则写该日；无则不建历史空目录，孤儿行写最新一份。回写已有历史日文件须登记 pm-decisions。缺节则插入。仅能耗时 §1 待办表可空。

累计总能耗：N [能耗单位]（截至 YYYY-MM-DD）

| 日期 | 当日能耗 | 来源 | 备注 | 异常 |
|---|---|---|---|---|
| YYYY-MM-DD | N [能耗单位] / — | PM 投喂 / 默认规则 | [备注] | — / 重复待裁定 |

### 分次明细（可选）

> 仅当同一人同一自然日有多次填报、或时间粒度细于日期时才写本小节。无则整节省略，禁止空表占位。
> 当日能耗 = 该日各次 SUM。关联 TD 默认 —；PM 指定、或当日唯一待办且 PM 确认，才写 TD 号；对不上标「待归属」。禁止 AI 猜绑。
> 「外部任务/内容」抄投喂原文，不覆盖 §1 待办标题。

| 日期 | 填报时间 | 当次量 | 外部任务/内容 | 关联 TD |
|---|---|---|---|---|
| YYYY-MM-DD | YYYY-MM-DD [HH:MM] | N [能耗单位] | [投喂原文] / — | — / TD-{缩写}-{YYYYMMDD}-{NNN} / 待归属 |

## 1. 待办清单

> 1.1～1.3 三张表通过“待办编号”列关联；关联如何办结另见 §1.5，不挤核心 8 列。列预算硬约束：核心执行表 8 列为 AI 生成稳定上限，后续新增字段一律下沉备注区或其他表。

### 1.1 核心执行表（8 列）

| 待办编号 | 标题 | 状态 | 进度 | WP Ref | 计划 Ref | 开始时间 | 结束时间 |
|---|---|---|---|---|---|---|---|
| TD-{缩写}-{YYYYMMDD}-{NNN} | [任务] | 待处理/进行中/已阻塞/已完成/已取消/已转出 | 0%~100% / — | WP-NNN（恰好一个，禁止空/多值） | PLAN-NNN | YYYY-MM-DD | YYYY-MM-DD |

### 1.2 工时与变更表（5 列）

| 待办编号 | 原始结束时间 | 预估工时 | 实际工时 | 延期次数 |
|---|---|---|---|---|
| TD-{缩写}-{YYYYMMDD}-{NNN} | YYYY-MM-DD | [人天] | [人天] / — | [N] |

### 1.3 关联与溯源表（7 列）

| 待办编号 | 风险 Ref | 问题 Ref | 决策 Ref | 阻塞 Ref | 溯源 | 关联待办 |
|---|---|---|---|---|---|---|
| TD-{缩写}-{YYYYMMDD}-{NNN} | R-xxx / — | I-xxx / — | D-{YYYYMMDD}-{HHmmss} / — | — | TD-x→TD-y / — | TD-{缩写}-{YYYYMMDD}-{NNN} / — |

### 1.4 备注区（列表格式，非表格）

- TD-{缩写}-{YYYYMMDD}-{NNN}：[备注] | 来源：口述/日报/会议/变更/风险跟踪/问题跟踪/PM督办/新建/结转 | 是否结转：是/否 | 跨天：是/否 | 阶段：{与该 WP §8 完全相同的阶段名} / —

> 字段约定（对齐 references/00-pm-main-rules.md §5a 与升级方案 9.1）：
> - **待办编号**：全局唯一，编号中的日期 = 创建日期（**结转/跨天不变**）。
>   - ⚠️ **硬约束**：结转任务**必须沿用原编号**（如 `TD-朱宇杰-20260817-002`），禁止重新编号为今天的日期（如 `TD-朱宇杰-20260818-003`）
>   - **场景区分**：
>     - 结转（跨天，同一人）→ 编号不变
>     - 换人（转交，不同人）→ 生成新编号 + 溯源链（`TD-张三 -... → TD-李四 -...`）
>     - 新建（全新任务）→ 新编号
> - **原始结束时间**（工时与变更表）：不可变基线，首次设定后永不修改；超期始终按此判定，结束时间可随延期后移。
> - **结束时间**（核心执行表）：当前预计完成日期，可随延期后移（每次后移 延期次数 +1）。
> - **溯源**（关联与溯源表）：换人链路，`TD-xxx → TD-yyy → 当前编号`。
> - **关联待办**（关联与溯源表，v3.3.0）：可选；无则 —。填写则必须是合法 `TD-{缩写}-{YYYYMMDD}-{NNN}`。关联双向：TD-A 关联 TD-B 则反之（AI 创建时强制双向写入）。存量无本列 = 无关联。终态同步读 §1.5 处理方式；有则 AUTO，无则问一次并写入记录。
- **决策 Ref**（v3.17.0）：仅 `decisions/decision-log.md` 的 D-xxx，禁止写 `pm-decisions.md` 块号。写入 I/D/REQ 必须回写本列（或问题/需求列）及绑定工作包关联记录。
> - **进度**（核心执行表，v2.1.0 新增）：取值 0%~100%（或“—”）；来源：日报映射/PM 手工更新；结转时进度随待办一起结转。
>   - ⚠️ **进度↔状态双轨仲裁（D-26）**：状态列为唯一权威源，进度列为辅助量化。状态=已完成 ⇒ 进度必须 100%（若 <100% 自动修正为 100% 并记 §6 变更日志）；进度=100% 但状态≠已完成 ⇒ **不自动提升状态**（已完成为终态，需 PM 确认），仅输出待办联动建议；状态=已取消/已转出 ⇒ 进度保留当前快照，不强制清零。
>
> **多表结构读取约定**：待办状态 = 核心执行表“状态”列（唯一权威源）；待办进度 = 核心执行表“进度”列；是否结转/结转来源 = 备注区（按待办编号匹配）；工时/延期 = 工时与变更表；风险/问题/阻塞/溯源/关联待办 = 关联与溯源表；终态同步处理方式 = §1.5。

### 1.5 关联处理记录

> 不挤核心 8 列。创建时你已说明怎么办结 → 写入处理方式，`生效=是`，之后按记录 AUTO，不问。只建了关联没说怎么办结 → 处理方式空，进决策文件「关联待办缺处理方式」，问一次再记下。存量无本表 = 缺处理方式，触碰办结时问一次（不扫全库回填）。

| 本单 TD | 关联 TD | 处理方式 | 指示来源 | 生效 |
|---|---|---|---|---|
| TD-{缩写}-{YYYYMMDD}-{NNN} | TD-{缩写}-{YYYYMMDD}-{NNN} | 本单办结则同步完结关联方 / 关联方办结则同步完结本单 / 双向同步办结 / 仅通知不同步 / 各自独立 | 口述 / 会议 / 本文件历史 / — | 是 / 否 |

## 2. 日报存档

> 日报原文逐字存档（v2.1.0 新增，需求十三两步流程第一步）：收集到的个人工作汇报先**逐字**写入本段，禁止只存加工摘要；存档是映射的前置步骤（先存档后映射）。加工结果写入 §3 工作日志段，进度/问题描述按映射规则落待办字段（见 01 号规则日报两步流程）。

### YYYY-MM-DD [HH:MM] 收集（来源：口述/群消息/邮件/其他）

> [日报原文，逐字保留]

**映射登记**（可溯源）：
- [日报条目] → TD-{缩写}-{YYYYMMDD}-{NNN}：进度列更新为 XX% / 备注区补充 [内容]
- [无法匹配任何待办的进展] → 标记“待归属”，由 PM 确认是否新建待办（禁止 AI 自动新建）

## 3. 工作日志

> 记录已完成工作。每条日志必须关联待办编号（TD Ref）；无法关联则标「待归属」（同 §2 映射规则）。已完成待办在待办清单标状态=已完成，此处补记产出。日报加工结果写入本段（原文在 §2）。存量无 TD Ref 的条目视为未关联，不强制回填。

- [时间] [工作内容 / 产出] | TD Ref: TD-{缩写}-{YYYYMMDD}-{NNN} / 待归属

## 4. 个人备注

- [备注]

## 5. 时间线 / 里程碑影响

| WP 编码 | 所属阶段 | 里程碑影响 |
|---|---|---|
| WP-NNN | M0X | [影响说明] |

## 6. 变更日志

| 时间 | 变更内容 | 原因 |
|---|---|---|
| YYYY-MM-DD | [变更] | [原因] |

## Revision Log

| Time | Change | Reason | Operator |
|---|---|---|---|
